Minor bug fixes in docs

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,9 +3,17 @@
   to = "/docs/guides/html-and-js/"
 
 [[redirects]]
-  from = "/docs/resources/jwt-token/"
-  to = "/docs/howto/jwt-token/"
+  from = "/docs/howto/handle-jwt-token/"
+  to = "/docs/howto/handle-jwt-token/"
 
 [[redirects]]
   from = "/docs/dev-integrations/email-whitelisting/"
   to = "/docs/howto/email-whitelisting/"
+
+[[redirects]]
+  from = "/docs/howto/jwt-token/"
+  to = "/docs/howto/handle-jwt-token/"
+
+[[redirects]]
+  from = "/docs/howto/asp.net/"
+  to = "/docs/howto/asp-dot-net/"
