--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.4.2",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@styled-icons/fa-solid": "^10.34.0",
     "algoliasearch": "^4.12.1",
     "gatsby": "^2.32.3",
@@ -20,6 +22,7 @@
     "gatsby-plugin-google-tagmanager": "^3.2.0",
     "gatsby-plugin-hotjar": "^1.1.1",
     "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-offline": "^3.10.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
